@@ -1,3 +1,10 @@
+Thu Oct  6 16:11:56 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        *
+          DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+
+          Added more debug statements and also comments in the code.
+
 Thu Oct  6 15:32:41 CDT 2005 Stoyan Paunov spaunov@isis.vanderbilt.edu
 
 
